# vibe-executor

./: .gitignore  LICENSE  NOTICE  README.md
crates/executors/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
crates/executors-core/: Cargo.toml
crates/executors/examples/: amp_basic.js  claude_code_plan.js  gemini_basic.js  simple_usage.js
crates/executors/src/: lib.rs  napi_ext.rs
crates/utils/: Cargo.toml
crates/utils/src/: assets.rs  lib.rs
