[package]
name = "vibe-executor-napi"
version = "0.0.152"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt", "async"] }
napi-derive = "2.12.2"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat", "rt"] }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tracing = "0.1.43"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
schemars = { version = "1.0.4", features = ["derive", "chrono04", "uuid1", "preserve_order"] }
dirs = "5.0"
xdg = "3.0"
async-trait = "0.1"
directories = "6.0.0"
command-group = { version = "5.0", features = ["with-tokio"] }
regex = "1.11.1"
json-patch = "2.0"
thiserror = "2.0.12"
enum_dispatch = "0.3.13"
futures-io = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["io-util"] }
futures = "0.3.31"
bon = "3.6"
fork_stream = "0.1.0"
os_pipe = "1.2"
strip-ansi-escapes = "0.2.1"
strum = "0.27.2"
strum_macros = "0.27.2"
convert_case = "0.6"
sqlx = "0.8.6"
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
shlex = "1.3.0"
executors_core = { path = "../executors-core", package = "executors" }
agent-client-protocol = { version = "0.8", features = ["unstable"] }
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", rev = "565488c15b8969694ec52cda3d6fcc99655a972f" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", rev = "565488c15b8969694ec52cda3d6fcc99655a972f" }
codex-mcp-types = { git = "https://github.com/openai/codex.git", package = "mcp-types", rev = "565488c15b8969694ec52cda3d6fcc99655a972f" }
sha2 = "0.10"
derivative = "2.2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
eventsource-stream = "0.2"
walkdir = "2"
rand = "0.8"

[build-dependencies]
napi-build = "2.0.1"

[target.'cfg(windows)'.dependencies]
winsplit = "0.1.0"

[features]
default = []
qa-mode = []

[package.metadata.napi]
