[package]
name = "utils"
version = "0.0.152"
edition = "2024"

[dependencies]
tokio-util = { version = "0.7", features = ["io", "codec"] }
bytes = "1.0"
shlex = "1.3.0"
axum = { version = "0.8.4", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
rust-embed = "8.2"
directories = "6.0.0"
open = "5.3.2"
regex = "1.11.1"
sentry = { version = "0.41.0", default-features = false, features = ["anyhow", "backtrace", "panic", "debug-images", "reqwest"] }
sentry-tracing = { version = "0.41.0", default-features = false, features = ["backtrace"] }
futures-util = "0.3"
json-patch = "2.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
shellexpand = "3.1.1"
which = "8.0.0"
similar = "2"
git2 = { version = "0.20.3", default-features = false }
dirs = "5.0"
thiserror = "2.0.12"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots-no-provider"] }
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "uuid", "chrono"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.61", features = ["Win32_System_Environment"] }
